--- a/project-gym/package.json
+++ b/project-gym/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/material": "^5.12.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-easy-swipe": "^0.0.23",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
